--- a/VRChat/20/1287220.html
+++ b/VRChat/20/1287220.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "fODNvcSWiwN6AkSif6uQGJDB/G+rCe9gWNqM9oOiI4A="></script>
+    "XlOdYgjIC2ZmNA1+/xcVm8DtTv4BcIltGZ3ZjYkIBcY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【ハイポリ】スチパンゴーレムパーツ集","description":"「【ハイポリ】スチパンゴーレムパーツ集」をダウンロードいただきありがとうございます。\n本商品は当方がアニメーション用に作成したゴーレムのパーツを一まとめにしたオブジェクトパーツ集となります。\nすべてのパーツをアバター、もしくわオブジェクトとしてアップロードした場合、7万ポリゴンを超えてしまいますので、ご注意ください。\nマテリアルについては同封されているマテリアルを編集及び適用お好みでお願いいたします。\nまたマテリアルが同封されていない場所につきましてはお好みのシェーダー、テクスチャ等を適用お願いします。\n\nオブジェクトサイズについてはそれぞれ調整は行っておりませんので、各自でサイズの調整をお願いします。\nサイズ調整のやり方、その他使い方がわからない場合は下の連絡先から連絡いただけるとありがたいです。\n又本パーツ集には、前回販売致しました「スチームパンク杖（ローウェル）、スチームパンク帽子（サウス）」のパーツも含まれております。\n\n【注意】\nポリゴン数において削減を行っておりませんので、熟考の上でご購入お願いいたします。\n\n本モデルにはarktoon-shadersを使用しております。\n参考画像ではパーティクルを使用しておりますが、本パーツ集にはパーティクルは同封しておりません。\n\n【内容物】\n・【ハイポリ】ゴーレムパーツ集\n・Readme.txt\n\n□パーツ詳細\n・ゴーレム　砲台　分解（ゴーレム腕部分です）\n・上腕、上腕　蓋、上腕パイプ1、上腕パイプ2、上腕パイプ3（ゴーレムの上腕部分です）\n・機構天使の羽（ゴーレム羽部分です）\n・胴体（ゴーレム胴体部分です）\n・頭（ゴーレム頭部分です）\n・腰下　歯車部分（ゴーレム腰下の歯車部分です）\n・パイプ群（ゴーレム胴体及び腰に装着しているパイプ郡です）\n・ピストン（ゴーレム頭部及び胴体部分に装着しているピストン部分です）\n・砂時計（ゴーレム頭部　片目部分に装着している砂時計です）\n・歯車（ゴーレム頭部及び胴体部分に装着している歯車です）\n\n\n【利用規約】\n▲CC0で著作権を放棄し、パブリックドメインに提供します。ご自由にお使いください。\nhttps://creativecommons.org/publicdomain/zero/1.0/deed.ja\n\n・クレジット記載不要、商業利用可\n\n・このモデルの作成者を騙ることの禁止\n\n・当モデルを使用して発生したトラブルに一切の責任を作成者は負いません。\n\n――――――――――――――――――――――――――――――――――――――\n\n▲制作者の連絡先\n　ご不明な点があれば、ご連絡ください\n\n制作者：れみーと\n\nTwitter : @remiiiiiiit\n\n――――――――――――――――――――――――――――――――――――――","url":"https://booth.pm/ja/items/1287220","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1500"},"image":"https://booth.pximg.net/c/620x620/00dca8ed-9814-4b4e-bd26-029d6809f5ee/i/1287220/9fcdb7d3-9f11-4a47-8fee-bb8e664c1ff8_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="fODNvcSWiwN6AkSif6uQGJDB/G+rCe9gWNqM9oOiI4A="></script>
+    nonce="XlOdYgjIC2ZmNA1+/xcVm8DtTv4BcIltGZ3ZjYkIBcY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1287220/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               107
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1287220/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               107
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
