--- a/VRChat/31/1286431.html
+++ b/VRChat/31/1286431.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "vp8W+DYI8j0pacwdexVIYQP/FhSpwPB4X+o8aRKVcd8="></script>
+    "j0VBC2+Ik1g7WGJr0dCRKPgyGSIO1EXtPu4MWrK+7bo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料あり】フグのひれ酒【Unity・VRChat用】","description":"何を言っているか分からないと思いますが作ってほしいとの要望がありましたので作りました。\n\n\nざっくりなんでテクスチャ構成ががボロボロですが同梱のUnitypackageに入っているマテリアルを適用していただくとご利用いただけると思います。\n\nポリゴン数:2128\n\n余談\nR-18にしようか迷いました。\n\n\u003c利用規約\u003e\n・禁止事項\n第三者への再配布\n自作発言\n\n・可能なこと\nモデルの改変\nUnityやVRChat以外での利用\n商用利用\n\n・著作権\n本モデルの著作権は当方が有するものとします。\n","url":"https://booth.pm/ja/items/1286431","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/986023a5-9d6b-4b00-a3c7-8c6a866c4b8e/i/1286431/968de2a1-e960-4dcc-877a-b41018cd5a03_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="vp8W+DYI8j0pacwdexVIYQP/FhSpwPB4X+o8aRKVcd8="></script>
+    nonce="j0VBC2+Ik1g7WGJr0dCRKPgyGSIO1EXtPu4MWrK+7bo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1286431/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               62
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1286431/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               62
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
