--- a/VRChat/21/1286321.html
+++ b/VRChat/21/1286321.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "yJRJYmvroQXGJFWbP8e+Xw/x/UmnDga2B8vRMNOKRiA="></script>
+    "v1a1wnAXsSyyUA73+sPFsJwC9Ze4JBFXuj3YUHtLbH8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ドイツ軍ぽい銃剣　VRchat","description":"内容物\n△2770\nTexture1枚\nFBX\nread me\n\nドイツ軍ぽい銃剣作りました\n本物とはちょっと違います\nシェイプで刀身が伸びるよ\n実寸kar98k用\n\nWehrmacht Seitengewehr84,98\nドイツ国防軍　銃剣84,98","url":"https://booth.pm/ja/items/1286321","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/09a829b3-704e-457f-9111-01930f512f81/i/1286321/489975ab-d826-4b11-b941-5ba668429bc5_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="yJRJYmvroQXGJFWbP8e+Xw/x/UmnDga2B8vRMNOKRiA="></script>
+    nonce="v1a1wnAXsSyyUA73+sPFsJwC9Ze4JBFXuj3YUHtLbH8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1286321/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               210
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1286321/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               210
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
