--- a/VRChat/48/1285848.html
+++ b/VRChat/48/1285848.html
@@ -101,9 +101,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "iiyao39KCEyEP6veNz0xfzlaGQRRafWTQO0vsmzo6Ns="></script>
+    "2d/Z4U4UBiuk3n2zWLrZIWlDJJ358nVDCMAacoEb5gM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat用自動車「Sanobant」※ワールドに置くと運転できるよ！","description":"注意：この商品は「VRCSDK2」向けです。3では動作しませんのでご留意ください。\n\n・自作のVRChatワールドにプレハブを設置するだけで、誰でも乗り込んで運転ができる4人乗り乗用車（オプションでラジオつき）です。\n\n・VR、デスクトップ両方で動きます。\n\n・本データをダウンロードした段階で、利用規約（下記参照）に同意したものとみなしますので、必ず目を通してからご購入＆ご利用ください。\n\n・車のデザインは某東側諸国の国産車をイメージしています。\n\n・エンジン音、ブレーキ音は問題が多発するため外しています。\n\n・unitypackageとReadme(text)が入ったzipです。\n\n・試乗はこちらのワールドで可能です。\n→https://vrchat.com/home/launch?worldId=wrld_5b56858b-4cd9-4776-9eb3-2d5795f94dbb","url":"https://booth.pm/ja/items/1285848","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"1500","highPrice":"3000"},"image":"https://booth.pximg.net/c/620x620/1a4e0889-d4a0-4259-9d32-ed14de1b80f3/i/1285848/536e53bd-612a-43e9-80ae-5b78b09f3da0_base_resized.jpg"}
     </script>
@@ -114,7 +114,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="iiyao39KCEyEP6veNz0xfzlaGQRRafWTQO0vsmzo6Ns="></script>
+    nonce="2d/Z4U4UBiuk3n2zWLrZIWlDJJ358nVDCMAacoEb5gM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -138,6 +138,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -182,7 +184,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1285848/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               179
@@ -197,14 +199,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1285848/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               179
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
