--- a/VRChat/31/1285331.html
+++ b/VRChat/31/1285331.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "ucD4PkDpSt7H+W1Z1ASYR4riO9opgOoQH0U17tsOLWE="></script>
+    "zZT5u41UlVdzVUx1NP8pOOWutNTf+s+7raTPH7lBiaA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル (ELLA)","description":"-オリジナル3Dモデル (ELLA)\n\n-制作者 Yato\n\n-VRChat向けの設定をしております\n\n-trackerがなくtrackerテスト x\n\n-最初の作品なので、エラーがあった場合、すぐにメールにてお知らせください\n\ngytlr7223@gmail.com\n\n\n\n\n","url":"https://booth.pm/ja/items/1285331","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3500"},"image":"https://booth.pximg.net/c/620x620/083faa0e-4980-4940-a74b-eb814f88b371/i/1285331/d32609ac-381e-40e2-adba-b4dcc0707efc_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ucD4PkDpSt7H+W1Z1ASYR4riO9opgOoQH0U17tsOLWE="></script>
+    nonce="zZT5u41UlVdzVUx1NP8pOOWutNTf+s+7raTPH7lBiaA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1285331/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               117
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1285331/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               117
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
