--- a/VRChat/00/1285300.html
+++ b/VRChat/00/1285300.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "zB9fbbBZiv1F8+0Nve/rQK6rb5PjePBPhZEm8hfu/xI="></script>
+    "jtHRo0d0RxbVYQgfnx6IZcIArwGEWyBsW/FRQK1KsMA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Raymarching 3DMap (VRChat/Unity)","description":"Unity2019まで動作確認してあります。Unityのバージョン更新によって動かなくなった場合にサポートはしかねます。対応した場合は告知します。\n\n---\n\nワールドの3Dマップを描画するためのシェーダとその機構です。  \n256*256のカメラ2つで、画像のような綺麗かつ軽量な3Dマップを描画できます。(プレイヤーの陰を表示する場合は追加で一つ)\nそれぞれ二枚目の画像では、高解像度な\nColor: 512 * 512\nDepth: 256 * 256\nMaxStep: 256\nという設定を使用しています。\n---\n使用した場合、READMEを読み全文に同意したものとみなします。\n----------\n\nA shader and its mechanism for drawing 3D maps of the world.\nYou can draw beautiful and lightweight 3D maps with a minimum of two 256 * 256 cameras. (If you want to show the player's shadow, you can add one camera additionaly)\n  \nEach second images, using high resolve settings:\nColor: 512 * 512\nDepth: 256 * 256\nMaxStep: 256\n\n---\nIf you use this, I consider you to read the README and agree to the full text.","url":"https://booth.pm/ja/items/1285300","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/17196f09-c9fe-4c94-8cb2-5b76e97ce982/i/1285300/79e0ab89-8637-4b0a-9f22-41496ca1653a_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="zB9fbbBZiv1F8+0Nve/rQK6rb5PjePBPhZEm8hfu/xI="></script>
+    nonce="jtHRo0d0RxbVYQgfnx6IZcIArwGEWyBsW/FRQK1KsMA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -163,7 +165,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1285300/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               103
@@ -178,14 +180,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1285300/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               103
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
