--- a/VRChat/58/1284958.html
+++ b/VRChat/58/1284958.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Fy1nEj8l3JWvFQth8EPfhmhrpHLl2trGG4rbJBwcWks="></script>
+    "nev8An2HCHd/Ehjl/Y40ShLGWwzF1zHGu0Ufjs46TWc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"MCN-1521 (VRchat想定武器モデル)","description":"本製品は、VRChat向け、fbx形式の武器モデルです。\n\n\n製品内容\nreadme\nFBXファイル\nテクスチャファイル\nUnityPackage\n\n本体説明\n武器名　MCN-1521\nポリゴン数：全部品合計４０９２\nマテリアル数；合計二種（金属部、発光部）\n全長110cmを想定しています。（用途に合わせて変更してください。）\n色の部位ごとに、刃、黒、灰色、発光部、白色、グリップと6つの部品に分かれております。部品ごとにUV展開してスタックしてありますが、武器の表面などに模様などを入れることを想定していません。テクスチャのみでの改変は単色ずつ色を変える程度になると思います。\n\n\n使用に関して\n１．著作権は製作者 JUKI に帰属、改変後も JUKI に帰属します\n２．使用禁止事項 ；再配布、改変後の再配布は禁止とします\n\n３．使用可能事項\n改変、営利目的での使用、動画撮影等、禁止事項以外は原則縛りを設けません。\n\n４．免責事項\n　本データを利用による損害に対する責任は追わないものとさせていただきます。\n　特定個人や団体への中傷を目的とした利用を禁止します。\n\n５．連絡\n　データに不備等がございましたらすぐに修正させていただきます。その他不明点等ございましたら、ご連絡お願いいたします。\nTwitter；＠jyukipann \nMail；digitalneet@outlook.jp\n\n６.補足\n　商品画像はレンダリング後の画像です。Unity内のものとはマテリアルが異なります。\n　Unity 二日目の製作者が作りました。フィードバックお待ちしてあります。","url":"https://booth.pm/ja/items/1284958","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/446ed4b1-759c-4496-8b4f-27adf077ec67/i/1284958/d9c1cd03-e3e9-493a-91ab-a99f4833f1f8_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Fy1nEj8l3JWvFQth8EPfhmhrpHLl2trGG4rbJBwcWks="></script>
+    nonce="nev8An2HCHd/Ehjl/Y40ShLGWwzF1zHGu0Ufjs46TWc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1284958/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               36
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1284958/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               36
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
